--- a/docker/mysql/z_bx_custom.cnf
+++ b/docker/mysql/z_bx_custom.cnf
@@ -8,4 +8,7 @@ collation-server = utf8_unicode_ci
 init-connect = "SET NAMES utf8 COLLATE utf8_unicode_ci"
 skip-name-resolve
 
+# Отключить бинарное ведение журнала
+skip-log-bin
+
 #slow-query-log-file             = /var/log/mysql/slow.log
