--- a/docker/php74/php.ini
+++ b/docker/php74/php.ini
@@ -14,6 +14,7 @@ post_max_size = 1024M
 memory_limit = 256M
 upload_max_filesize = 1024M
 extension=mcrypt
+session.use_trans_sid = 0
 
 [opcache]
 opcache.revalidate_freq = 0
