--- a/docker/php81/php.ini
+++ b/docker/php81/php.ini
@@ -1,18 +1,25 @@
 [php]
 short_open_tag = On
-display_errors = On
+display_errors = Off
 error_log = "/var/log/php/error.log"
-error_reporting = E_ALL ^ E_DEPRECATED ^ E_WARNING
+error_reporting = E_ALL
 log_errors = On
 display_startup_errors = On
 cgi.fix_pathinfo = 0
 date.timezone = "Europe/Moscow"
 mbstring.internal_encoding = "UTF-8"
+mbstring.func_overload = 0
 max_input_vars = 10000
 post_max_size = 1024M
-memory_limit = 2048M
+memory_limit = 512M
+file_uploads = On
 upload_max_filesize = 1024M
 extension=mcrypt
+enable_dl = Off
+short_open_tag = On
+allow_url_fopen = On
+mail.add_x_header = Off
+expose_php = Off
 
 [opcache]
 opcache.revalidate_freq = 0
