--- a/docker/img-81/php.ini
+++ b/docker/img-81/php.ini
@@ -1,20 +1,25 @@
 [php]
 short_open_tag = On
-display_errors = On
+display_errors = Off
 error_log = "/var/log/php/error.log"
-error_reporting = E_ALL ^ E_DEPRECATED
+error_reporting = E_ALL
 log_errors = On
 display_startup_errors = On
 cgi.fix_pathinfo = 0
 date.timezone = "Europe/Moscow"
-mbstring.func_overload = 0
 mbstring.internal_encoding = "UTF-8"
+mbstring.func_overload = 0
 max_input_vars = 10000
 post_max_size = 1024M
-memory_limit = 256M
+memory_limit = 512M
+file_uploads = On
 upload_max_filesize = 1024M
 extension=mcrypt
-session.use_trans_sid = 0
+enable_dl = Off
+short_open_tag = On
+allow_url_fopen = On
+mail.add_x_header = Off
+expose_php = Off
 
 [opcache]
 opcache.revalidate_freq = 0
@@ -35,3 +40,5 @@ xdebug.idekey = "PhpStorm"
 
 [mail]
 sendmail_path = /usr/bin/mhsendmail --smtp-addr mailhog:1025
+
+
