php ini для 8.1

--- a/docker/bx81/php.ini
+++ b/docker/bx81/php.ini
@@ -20,6 +20,7 @@ short_open_tag = On
 allow_url_fopen = On
 mail.add_x_header = Off
 expose_php = Off
+session.save_path = /var/tmp
 
 [opcache]
 opcache.revalidate_freq = 0
