--- a/docker/bx74/Dockerfile
+++ b/docker/bx74/Dockerfile
@@ -29,8 +29,8 @@ RUN cp /root/go/bin/mhsendmail /usr/bin/mhsendmail
 
 # DO NOT install php7.4-xdebug package for site running in production! It will slow it down significantly.
 
-COPY ./php.ini /etc/php/7.4/fpm/conf.d/90-php.ini
-COPY ./php.ini /etc/php/7.4/cli/conf.d/90-php.ini
+# COPY ./php.ini /etc/php/7.4/fpm/conf.d/90-php.ini
+# COPY ./php.ini /etc/php/7.4/cli/conf.d/90-php.ini
 
 RUN usermod -u 1000 www-data
 
