--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -22,6 +22,9 @@ server {
 		fastcgi_index index.php;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		include fastcgi_params;
+
+		# борьба с ошибкой времени ожидания
+		fastcgi_read_timeout 600;
 	}
 
 }
